# xkernels

./: .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml
.rcc/: config.toml  rccignore
benchmarks/: bench_all.py  bench_fp8_blockscale_gemm.py  bench_mhc_pre_post.py  bench_moe_align_block_size.py  bench_moe_combine.py  bench_moe_e2e_routing.py  bench_moe_int4_w4a16.py  bench_moe_mxfp4.py  bench_moe_sum_reduce.py  bench_mxfp4_gather.py  bench_one.py  bench_sparse_mla.py  probe_ffn.py  probe_fp8_mfma.py  probe_ncu.py  probe_omniperf.py  tune_fp8_blockscale_gemm.py  tune_mhc_prenorm_gemm.py  tune_moe_int4_w4a16.py  tune_sparse_mla.py
docs/: DRIFT_CHECK_REPORT.txt  README.md  adding-a-kernel.md  benchmarking-on-beverin.md  benchmarking-on-bristen.md  check_document_drift.py  ds5-cute-testbed.md  issue-17-bf16-dense-gemm.md  issue-26-mxfp4-moe-ep.md  issue-27-dsa-indexer.md  issue-28-mxfp4-paged-gather.md  issue-32-sparse-mla-attention.md  issue-36-mhc-prenorm-gemm.md  issue-38-fp8-blockscale-gemm.md  issue-39-v4-perf-pass.md  issue-41-fp8-mfma-blockscale-gemm.md  issue-43-mxfp4-moe-gemm.md  issue-44-mhc-pre-post.md  library.md  profiling-on-beverin.md  profiling-on-bristen.md  tilelang-sparse-mla-evaluation.md
extensions/: _gpu-detect.ts  remote-gpu.ts
scripts/: README.md  bench-on-beverin.sh  bench-on-bristen.sh  bench-pr-on-beverin.sh  bench_kernel_loop_bristen.sh  cluster.sh  ds5_api_introspect.py  ds5_api_probe.py  ds5_arch_probe.py  ds5_build.sh  ds5_c_final_probe.py  ds5_c_solved_test.py  ds5_compile_api_probe.py  ds5_compile_probe.py  ds5_compile_src_probe.py  ds5_cute_compile_test.py  ds5_cute_gemm_test.py  ds5_cute_perf.py  ds5_dot_probe.py  ds5_dsl_math_probe.py  ds5_dsl_probe.py  ds5_dsl_reduction_api.py  ds5_dsl_reduction_probe.py  ds5_dsl_rowsum_probe.py  ds5_entry_bench_probe.py  ds5_find_examples.py  ds5_fp32_compare.py  ds5_gemm_probe.py  ds5_jit_cache_probe.py  ds5_jitcache_probe.py  ds5_launch_overhead_probe.py  ds5_m128_diag.py  ds5_moe_sum_perf.py  ds5_multishape_probe.py  ds5_ncu_baseline.py  ds5_ncu_probe2.py  ds5_peak.py  ds5_perf_breakdown.py  ds5_post_refactor_smoke.py  ds5_prenorm_perf.py  (+26 more)
skills/: README.md
slurm/: bench_align_beverin.sbatch  bench_all_bristen.sbatch  bench_all_bristen_isolated.sbatch  bench_fp8_blockscale_beverin.sbatch  bench_moe_combine_beverin.sbatch  probe_dense_bf16_beverin.sbatch  probe_fp8_mfma_beverin.sbatch  probe_moe_ep_beverin.sbatch  probe_mxfp4_gather_beverin.sbatch  profile_ncu_bristen.sbatch  profile_nsys_bristen.sbatch  profile_omniperf_beverin.sbatch  (+8 more)
(+564 files in other folders)
