[build-system]
requires = ["setuptools>=64", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "xkernels"
version = "0.0.1"
description = "Customized compute kernels across hardware vendors and kernel types"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Xiaozhe Yao" }]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
triton = ["triton>=3.0"]
bench = ["pandas", "matplotlib"]
dev = ["pytest>=7", "ruff>=0.4", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xkernels = ["ops/**/*.cu", "ops/**/*.cpp", "ops/**/*.h", "ops/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
