[build-system]
requires = ["setuptools>=64", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "xkernels"
version = "0.0.1"
description = "Customized compute kernels across hardware vendors and kernel types"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Xiaozhe Yao" }]
dependencies = ["torch>=2.1", "numpy>=1.24"]

[project.optional-dependencies]
triton = ["triton>=3.0"]
cute = ["nvidia-cutlass-dsl[cu13]"]  # NVIDIA CUTE DSL (CUTLASS Python). sm_80+; heavy, NVIDIA-only — opt-in extra. NOTE: the package is `nvidia-cutlass-dsl` (installs the `cutlass` module -> `cutlass.cute`); PyPI `cutlass` is an unrelated squatter and `nvidia-cutlass` only ships the pycute layout lib.
bench = ["pandas", "matplotlib"]
dev = ["pytest>=7", "ruff>=0.4", "pre-commit", "jsonschema>=4", "pyyaml>=6"]
mcp = ["mcp>=1.0"]

[project.scripts]
vkl = "xkernels.vkl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xkernels = ["ops/**/*.cu", "ops/**/*.cpp", "ops/**/*.h", "ops/**/*.json"]
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "meta/benchmarks"]
# Archived exploratory one-shots (ds5 CUTE-DSL probe corpus, dated campaigns,
# per-issue SLURM jobs) are kept for reproducibility and cited by the CUDA
# cards by path — they are not production code, so they stay out of the gate.
extend-exclude = ["scripts/archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
